crates/concrete/tests/invalid_programs/immutable_mutation.con
mod Simple {
    fn main() -> i32 {
        let x: i32 = 2;
        x = 4;
        return x;
    }
}
